<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <org.osmdroid.views.MapView
        android:layout_above="@id/bottom"
        android:layout_below="@id/top"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:background="@color/white"
        android:padding="10dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/pg_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

<!--    <com.mapbox.mapboxsdk.maps.MapView-->
<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        xmlns:tools="http://schemas.android.com/tools"-->
<!--        xmlns:mapbox="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/mapView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        mapbox:mapbox_cameraTargetLat="40.7128"-->
<!--        mapbox:mapbox_cameraTargetLng="-74.0060"-->
<!--        mapbox:mapbox_cameraZoom="9.0"-->
<!--        />-->

    <LinearLayout
        android:id="@+id/top"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:paddingHorizontal="10dp"
            android:layout_gravity="center_vertical|bottom"
            android:gravity="center_vertical"
            android:hint="@string/cari_nama_kota_search_country_name"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/et_search"
            android:importantForAutofill="no" />
        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/bottom"
        android:background="@color/white"
        android:padding="20dp"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:hint="@string/masukkan_nama_kota"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_name"
            android:importantForAutofill="no" />

        <Button
            style="@style/ThemeOverlay.AppCompat.Dark"
            android:id="@+id/btn_submit"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>

</RelativeLayout>